--- a/CFA_RULE_ONLINE_v2.yaml
+++ b/CFA_RULE_ONLINE_v2.yaml
@@ -2,7 +2,7 @@ proxy-providers:
   Akun_Indonesia:
     type: http
     url: https://github.com/ahlawisnu/CLASHV2/raw/main/Akun_Indonesia.yaml
-    path: "./Akun_Indonesia.yaml"
+    path: "./proxy/Akun_Indonesia.yaml"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -10,7 +10,7 @@ proxy-providers:
   Akun_MIX:
     type: http
     url: https://github.com/ahlawisnu/CLASHV2/raw/main/Akun_MIX.yaml
-    path: "./Akun_MIX.yaml"
+    path: "./proxy/Akun_MIX.yaml"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
